add keyword search

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -137,6 +137,16 @@
     min-width:300px;
 }
 
+#search-nav .dropdown-menu
+{
+    min-width:500px;
+}
+
+#search-menu
+{
+    padding:5px;
+}
+
 #icon-nav .form-check
 {
     padding-left:.25rem;
