--- a/app/views/search/_search.html.erb
+++ b/app/views/search/_search.html.erb
@@ -5,7 +5,7 @@
 		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Enter topic name" aria-label="Enter topic name">
 	</form>
 	
-	<div id="search_content" class="mt-3" style="max-height:400; overflow:auto">
+	<div id="search_content" class="mt-3" style="max-height:450px; overflow:auto">
 	</div>
 
 	<script>
