--- a/app/views/search/subpage.js.erb
+++ b/app/views/search/subpage.js.erb
@@ -1,1 +1,1 @@
-$('#search_content').html("	<%= j(link_to "Back", search_query_path(query: 'for'), method: :get, remote: true) %> <%= j(simple_markdown(@document)) %>");
+$('#search_content').html("	<%= j(link_to "Back", search_query_path(query: 'for'), method: :get, remote: true) %> <%= j(markdown(@document, @page)) %>");
