--- a/app/views/search/_form.html.erb
+++ b/app/views/search/_form.html.erb
@@ -3,7 +3,7 @@
 	<%= link_to search_subpage_path(id: sp.id), method: :get, remote: true, class: 'list-group-item list-group-item-action' do %>
 		<div class="d-flex w-100 justify-content-between">
 			<p>
-				<strong><%= sp.title %></strong>
+				<%= sp.title %><br>
 				<small><%= sp.description %></small>
 			</p>
 		</div>
