--- a/app/views/search/_search.html.erb
+++ b/app/views/search/_search.html.erb
@@ -5,7 +5,7 @@
 		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Enter topic name" aria-label="Enter topic name">
 	</form>
 	
-	<div id="search_content" class="mt-3" style="max-height:450px; overflow:auto">
+	<div id="search-content" class="mt-3" style="max-height:450px; overflow:auto">
 	</div>
 
 	<script>
@@ -43,7 +43,7 @@
 			// $('#keyword-search').readOnly = true;
 			$('#keyword-search').typeahead('close');
 			$.ajax({ url:"<%= search_query_path %>", dataType: "script", data: "query=" + suggestion})
-			$('#search_content').focus();
+			$('#search-content').focus();
 		}
 		
 		$('#keyword-search').bind('typeahead:autocomplete', go_search);
@@ -51,7 +51,7 @@
 		
 		$('#keyword-search').on('input', function(e) {
 			if(e.target.value == "") {
-				$('#search_content').html("");
+				$('#search-content').html("");
 			}
 		});
 		
