--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -13,3 +13,19 @@
     @extend .bg-dark;
     @extend .text-light;
 }
+
+#icon-nav .nav-link
+{
+    outline: none;
+}
+
+#icon-nav .nav-link[aria-expanded=true]
+{
+    background-color:#85C1FF;
+}
+
+.dropdown-menu-right
+{
+    right:-2px;
+    margin:0;
+}
