--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 				</div>
 				<% end %>
 
-				<div class="float-md-right navbar navbar-expand">
+				<div class="float-md-right p-absolute navbar navbar-expand">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
