--- a/app/views/search/_search.html.erb
+++ b/app/views/search/_search.html.erb
@@ -1,11 +1,10 @@
 <div id="search-menu">
-	<p role="presentation" class="dropdown-header p-0">Search reference documents and videos</p>
 	
-	<form class="form-inline mr-3 mt-3 w-100">
-		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Enter topic name" aria-label="Enter topic name">
+	<form class="form-inline mr-3 w-100">
+		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Search for a topic to get help" aria-label="Enter topic name">
 	</form>
 	
-	<div id="search-content" class="mt-3" style="max-height:450px; overflow:auto">
+	<div id="search-content" class="" style="max-height:450px; overflow:auto">
 	</div>
 
 	<script>
