--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 				</div>
 				<% end %>
 
-				<div class="float-md-right position-fixed navbar navbar-expand" style="top:0; right:0; z-index:1000; background-color:rgba(20,20,30,0.05);">
+				<div class="float-md-right position-md-fixed navbar navbar-expand" style="top:0; right:0; z-index:1000; background-color:rgba(20,20,30,0.05);">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
