--- a/app/views/layouts/full-width.html.erb
+++ b/app/views/layouts/full-width.html.erb
@@ -23,7 +23,7 @@
 
 		<div id="navbar" class="navbar bg-dark navbar-dark navbar-expand-lg flex-shrink-0">
 			<%= render 'layouts/brand' %>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			
