--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -17,12 +17,13 @@
 
 #sidebar
 {
-    background-color:#DDF0F9;
+    background-color:#f9fbfc;
+    border-right:1px solid #64A2C0;
 }
 
 input#keyword-search
 {
-    background-color:#F0F7FA;
+//    background-color:#F0F7FA;
 }
 
 #icon-nav .nav-link
