--- a/app/views/search/_search.html.erb
+++ b/app/views/search/_search.html.erb
@@ -1,10 +1,10 @@
 <div id="search-menu">
 	
 	<form class="form-inline w-100">
-		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Search for a topic to get help" aria-label="Enter topic name">
+		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Find supplementary materials by topic" aria-label="Enter topic name">
 	</form>
 	
-	<div id="search-content" class="" style="smax-height:450px; soverflow:auto">
+	<div id="search-content" class="mt-3" style="smax-height:450px; soverflow:auto">
 	</div>
 
 	<script>
@@ -41,6 +41,7 @@
 		function go_search(ev, suggestion) {
 			// $('#keyword-search').readOnly = true;
 			$('#keyword-search').typeahead('close');
+			$('#keyword-search').blur();
 			$.ajax({ url:"<%= search_query_path %>", dataType: "script", data: "query=" + suggestion})
 			$('#sidebar-content').hide();
 			$('#search-content').focus();
@@ -53,6 +54,7 @@
 			if(e.target.value == "") {
 				$('#sidebar-content').show();
 				$('#search-content').html("");
+				$('#keyword-search').blur();
 			}
 		});
 		
