fixup small display stuff

--- a/app/views/search/_search.html.erb
+++ b/app/views/search/_search.html.erb
@@ -1,4 +1,4 @@
-<div id="search-menu">
+<div id="search-menu" class="d-none d-md-block">
 	
 	<form class="form-inline w-100">
 		<input id="keyword-search" type="search" autocomplete="off" class="w-100 form-control form-control-sm border-secondary" placeholder="Find supplementary materials by topic" aria-label="Enter topic name">
