--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<div class="container-fluid" style="">
 		<div class="row" style="">
 			
-			<div id="sidebar" class="col-md-4 p-md-4 navbar d-md-block">
+			<div id="sidebar" class="col-md-4 p-md-4 navbar navbar-light d-md-block">
 				<%= render 'layouts/brand'%>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
