--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -1,4 +1,4 @@
-<div class="brand">
+<div class="brand flex-fill">
 	<a href="/" class="navbar-brand flex-fill d-flex">
 		<%= fa_icon "terminal", class: "pull-left fa-2x text-warning" %>
 		<div class="d-flex flex-column justify-content-center">
