cleanup admin stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,7 +71,7 @@
 				</div>
 				<% end %>
 
-				<div id="float-nav" class="float-md-right position-md-fixed navbar navbar-expand">
+				<div id="float-nav" class="float-md-right position-md-fixed navbar navbar-expand p-1">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
