--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -1,5 +1,41 @@
 <div id="timeline" class="row">
 	<div class="col-sm-7">
+		<% if current_user.senior? %>
+		<%= render partial: "user_modal" %>
+		<% end %>
+
+		<% if current_user.senior? %>
+			<form class="form-inline mr-3">
+				<div id="search" class="dropdown">
+					<input id="dropdown-control" type="hidden" data-toggle="dropdown">
+					<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-secondary" placeholder="Find student" aria-label="Find student">
+					<div id="search-results" class="dropdown-menu"></div></form>
+				</div>
+			</form>
+			<script>
+				$('#student-search').on('change paste input', function(e) {
+					$.ajax('<%= students_find_path %>', { data: { text: $('#student-search').val() } });
+					true;
+				})
+				$('#student-search').on('focus', function(e) {
+					console.log("huh");
+					// e.preventDefault();
+					if(!$("#search-results").hasClass("show")) {
+						$('#dropdown-control').dropdown('toggle');
+					}
+				})
+				$('#student-search').on('blur', function(e) {
+					console.log("blur");
+					// e.preventDefault();
+					setTimeout(100, function() {
+					console.log($("#search").hasClass("show"));
+					if($("#search-results").hasClass("show")) {
+						$('#dropdown-control').dropdown('toggle');
+					}
+					});
+				})
+			</script>
+		<% end %>
 		<%= render partial: "alerts" %>
 		<% if current_user.senior? %>
 		<div class="card" id="alertForm">
