--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -1,11 +1,27 @@
-<div class="brand flex-fill">
-	<a href="/" class="navbar-brand flex-fill d-flex">
-		<%= fa_icon "terminal", class: "pull-left fa-2x text-warning" %>
-		<div class="d-flex flex-column justify-content-center">
-		<span class="course-name"><%= Settings["course"] && Settings["course"]["name"] %></span>
+<div class="brand flex-fill align-items-center">
+	<%= fa_icon "terminal", class: "pull-left fa-2x text-warning" %>
+	<div class="d-flex flex-column">
+		<a href="/" class="navbar-brand pb-0 flex-fill d-flex">
+			<span class="course-name"><%= Settings["course"] && Settings["course"]["name"] %></span>
+		</a>
+		
 		<% if @group_name || @schedule_name %>
+		<% if current_user.admin? && Schedule.count > 1 %>
+		
+		<div class="dropdown">
+			<a class="dropdown-toggle" href="#" role="button" id="schedule_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<small><%= @group_name || @schedule_name %></small>
+			</a>
+
+			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="schedule_dropdown">
+				<% Schedule.all.each do |s| %>
+				<%= link_to s.name, user_assign_schedule_path(user_id: current_user.id, schedule_id: s.id), method: :post, class: "dropdown-item" %>
+				<% end %>
+			</div>
+		</div>
+		<% else %>
 		<small><%= @group_name || @schedule_name %></small>
 		<% end %>
+		<% end %>
 	</div>
-	</a>
 </div>
