--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,11 +71,11 @@
 				</div>
 				<% end %>
 
-				<div id="float-nav" class="float-md-right position-md-fixed navbar navbar-expand p-1">
+				<div id="float-nav" class="float-md-right position-absolute navbar navbar-expand p-3">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
-				<div id="content" class="p-3 p-md-4 p-sm-5 px-lg-5">
+				<div id="content" class="p-3 p-md-4 p-sm-5 p-lg-5">
 					<%= yield %>
 				</div>
 
