--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -10,7 +10,7 @@
 		
 		<div class="dropdown">
 			<a class="dropdown-toggle" href="#" role="button" id="schedule_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				<small><%= @group_name || @schedule_name %></small>
+				<%= @group_name || @schedule_name %>
 			</a>
 
 			<div class="dropdown-menu dropdown-menu-right" aria-labelledby="schedule_dropdown">
@@ -20,7 +20,7 @@
 			</div>
 		</div>
 		<% else %>
-		<small><%= @group_name || @schedule_name %></small>
+		<%= @group_name || @schedule_name %>
 		<% end %>
 		<% end %>
 	</div>
