fix sticky + submit

--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -90,6 +90,15 @@ body.page
     table-layout:fixed;
 	margin-bottom:0 !important;
 	padding-bottom:2em;
+    border-radius:0.25em;
+    border:1px solid gray;
+    background-color:whitesmoke;
+    padding:2em;
+}
+
+#submit-content h2
+{
+    margin-top:0 !important;
 }
 
 
