--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -244,6 +244,7 @@ section .kramdown-table td, .kramdown-table th
 {
     margin-top:2em;
     margin-bottom:2em;
+	max-width:500px;
 }
 
 div.embed-float
