--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -28,12 +28,12 @@
     padding-top:0 !important;
 }
 
-section p
+section > p
 {
 	margin-top:1em;
 }
 
-section h4
+section > h4
 {
 	margin-top:1.5em;
 }
