--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -1,3 +1,5 @@
+// CSS for the timeline feature
+
 #timeline
 {
     margin-bottom:2em
@@ -61,14 +63,3 @@
 {
     margin-top:0;
 }
-
-//#timeline .list-group
-//{
-//    border: 2px solid #f8f9fa;
-//}
-//
-//#timeline .list-group-item
-//{
-//    border-color: #f8f9fa;
-//    border-bottom-width: 2px;
-//}
