--- a/app/views/submits/show.html.erb
+++ b/app/views/submits/show.html.erb
@@ -43,14 +43,14 @@
 
 <div class="col-7" style="overflow-y:scroll; min-height:0; box-shadow:#cccccc 2px 0px 5px inset;max-height:100%">
 	
-	<% if @submit.file_contents.present? || @submit.has_feedback? %>
+	<% if @files.present? || @submit.has_feedback? %>
 	<ul class="nav nav-tabs" id="files" role="tablist">
 		<% first = true %>
-		<% @submit.file_contents.each_key do |filename| %>
+		<% @files.each_key do |filename| %>
 		<li class="nav-item">
 			<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-<%= filename.parameterize %>" role="tab"><%= filename %></a>
 		</li>
-		<% end if @submit.file_contents.present? %>
+		<% end if @files.present? %>
 		<% if @submit.has_feedback? %>
 		<li class="nav-item">
 			<a class="nav-link <%= (first = false) || 'active' if first %>" id="home-tab" data-toggle="tab" href="#file-check" role="tab">check</a>
@@ -59,9 +59,9 @@
 	</ul>
 	<div class="tab-content">
 		<% first = true %>
-		<% @submit.file_contents.each do |filename, contents| %>
+		<% @files.each do |filename, contents| %>
 		<div class="tab-pane fade <%= (first = false) || 'show active' if first %>" id="file-<%= filename.parameterize %>" role="tabpanel" aria-labelledby="home-tab">		<%= link_to 'd', { action: :download, submit_id: @submit.id, filename: filename }, class: 'pull-right' %><%= CodeRay.scan(contents, CodeRay::FileType.fetch(filename, :text)).div(:line_numbers => :inline).html_safe %></div>
-		<% end if @submit.file_contents.present? %>
+		<% end if @files.present? %>
 		<% if @submit.has_feedback? %>
 		<div class="tab-pane fade <%= (first = false) || 'show active' if first %>" id="file-check" role="tabpanel" aria-labelledby="home-tab"><code><pre><%= @submit.check_feedback_formatted %></code></pre></div>
 		<% end %>
