--- a/app/views/home/_submit.html.erb
+++ b/app/views/home/_submit.html.erb
@@ -15,7 +15,7 @@ URL: <%= link_to submit.url, submit.url %>
 </p>
 <% end %>
 <% if submit.has_feedback? %>
-<%= link_to "Check feedback", profile_feedback_path(submit), class:"btn btn-secondary", data: { toggle:'modal', target:'#fb-modal', submit: submit.id } %>
+<%= link_to "Check results", profile_feedback_path(submit), class:"btn btn-secondary", data: { toggle:'modal', target:'#fb-modal', submit: submit.id } %>
 <% end %>
 
 <div id="fb-modal" class="fade modal" tabindex="-1" role="dialog">
