--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -37,8 +37,8 @@
   content_tag(:div) { b.label { b.radio_button + " " + b.text } }
 end %>
 
-<div class="actions">
-	<%= f.submit class: 'btn' %>
+<div class="actions clearfix">
+	<%= f.submit class: 'btn btn-primary pull-right' %>
 </div>
 
 <% end %>
