--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -1,57 +1,153 @@
-<div id="timeline" class="row">
-	<div class="col-sm-7">
-		<% if current_user.senior? %>
-		<%= render partial: "user_modal" %>
-		<% end %>
+<div id="timeline">
+	<div class="card-columns" style="column-count:2">
 
-		<% if current_user.senior? %>
+		<%= render partial: "user_modal" %>
+
+		<div class="card">
+			<div class="card-body">
 			<form class="form-inline mr-3">
-				<div id="search" class="dropdown">
-					<input id="dropdown-control" type="hidden" data-toggle="dropdown">
+				<div id="search" class="dropdown" style="position: relative; width:100%">
 					<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-secondary" placeholder="Find student" aria-label="Find student">
-					<div id="search-results" class="dropdown-menu"></div></form>
+					<div id="dropdown-control" data-toggle="dropdown"></div>
+					<div id="search-results" class="dropdown-menu"></div>
 				</div>
 			</form>
-			<script>
-				$('#student-search').on('change paste input', function(e) {
-					$.ajax('<%= students_find_path %>', { data: { text: $('#student-search').val() } });
-					true;
-				})
-				$('#student-search').on('focus', function(e) {
-					console.log("huh");
-					// e.preventDefault();
-					if(!$("#search-results").hasClass("show")) {
-						$('#dropdown-control').dropdown('toggle');
-					}
-				})
-				$('#student-search').on('blur', function(e) {
-					console.log("blur");
-					// e.preventDefault();
-					setTimeout(100, function() {
-					console.log($("#search").hasClass("show"));
-					if($("#search-results").hasClass("show")) {
-						$('#dropdown-control').dropdown('toggle');
-					}
-					});
-				})
-			</script>
-		<% end %>
-		<%= render partial: "alerts" %>
-		<% if current_user.senior? %>
+			</div>
+		</div>		
+		
+		<script>
+			$('#student-search').on('change paste input', function(e) {
+				$.ajax('<%= students_find_path %>', { data: { text: $('#student-search').val() } });
+				true;
+			})
+			$('#student-search').on('focus', function(e) {
+				// e.preventDefault();
+				if(!$("#search-results").hasClass("show")) {
+					$('#dropdown-control').dropdown('toggle');
+				}
+			})
+			$('#student-search').on('blur', function(e) {
+				console.log("blur");
+				// e.preventDefault();
+				setTimeout(100, function() {
+				if($("#search-results").hasClass("show")) {
+					$('#dropdown-control').dropdown('toggle');
+				}
+				});
+			})
+		</script>
+
 		<div class="card" id="alertForm">
-			<p class="m-0">
-				<a class="btn btn-primary btn-block collapse show" data-parent="#alertForm" data-toggle="collapse" href="#collapseAlertForm" role="button" aria-expanded="false" aria-controls="collapseAlertForm">Write announcement</a>
-			</p>
-			<div class="card-body collapse" id="collapseAlertForm"  data-parent="#alertForm">
+			<div class="card-body" id="collapseAlertForm"  data-parent="#alertForm">
 				<h5 class="card-title">Add announcement</h5>
 				<% @alert = Alert.new() %>
 				<%= render partial: "alerts/form" %>
 			</div>
 		</div>
-		<% end %>
-	</div>
 
-	<div class="col-sm-5">
-		<%= render partial: "staff" %>
+		<% if current_user.schedule %>
+
+		<% if Hand.waiting.any? %>
+		<div class="card">
+			<div class="card-body">
+				<h5 class="card-title">Hands queue</h5>
+				<p><%= Hand.waiting.count %> are waiting.</p>
+			</div>
+		</div>
+		<% end %>
+
+		<%= render 'psets_to_publish' %>
+
+		<% if current_user.admin? %>
+
+			<% if @groups.blank? %>
+
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Grading</h5>
+						<% if @groups.blank? %>
+						<p class="card-text">
+							<%= @new_students.count %> students have submitted.
+							No grading groups have been defined yet.
+						</p>
+						<%= link_to 'Generate', admin_generate_groups_path(schedule_id: @schedule.id), class: 'btn btn-primary' %>
+						<%= link_to 'Import', admin_import_path(schedule_id: @schedule.id), class: 'btn btn-primary' %>
+						<% end %>
+					</div>
+				</div>
+	
+			<% else %>
+
+				<div class="card">
+					<div class="card-body">
+						<h5 class="card-title">Grading</h5>
+					</div>
+					<% if @groups.present? %>
+					<ul class="list-group list-group-flush">
+						<% @groups.each do |group| %>
+						<li class="list-group-item d-flex align-items-center">
+							<%= group.name %>
+							<span class="badge badge-primary ml-auto"><%= link_to "#{group.submits.includes(:grade).where(grades: { submit_id: nil }).count} sub", submits_path(group: group.id), class: 'text-light' %></span>
+							<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.open.count} gra", submits_path(group: group.id, status: Grade.statuses[:open]), class: 'text-light' %></span>
+							<span class="badge badge-primary ml-1"><%= link_to "#{group.grades.finished.count} fin", submits_path(group: group.id, status: Grade.statuses[:finished]), class: 'text-light' %></span>
+							<span class="badge badge-secondary ml-1"><%= link_to "#{group.grades.finished.count} reo", reopen_grades_path(group.id), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %></span>
+						</li>
+						<% end %>
+					</ul>
+					<% end %>
+					<%= render 'psets_to_publish' %>
+				</div>
+		
+				<% if @new_students.present? %>
+
+						<div class="card">
+							<div class="card-body">
+								<h5 class="card-title">New students</h5>
+							</div>
+							<ul class="list-group list-group-flush">
+								<% @new_students.each do |student| %>
+								<li class="list-group-item d-flex align-items-center">
+									<%= link_to student.name, "#", data: { toggle: "modal", target: "#user-modal", user: student.id } %>
+									<span class="badge badge-primary ml-auto"><%= student.created_at.strftime("%e %b") %></span>
+								</li>
+								<% end %>
+							</ul>
+						</div>
+				<% end %>
+
+			<% end %>
+
+		<% end %>
+
+		<% if current_user.admin? && !current_user.schedule.self_service %>
+			<div class="card">
+				<div class="card-body">
+					<h5 class="card-title">Current schedule</h5>
+					<% schedule = current_user.schedule %>
+					<% schedule.schedule_spans.each do |item| %>
+					<%= radio_button_tag( schedule.id, item.id, item == schedule.current, id: "#{schedule.name}#{item.id}", class: 'set-schedule') %> <%= label_tag "#{item.id}", item.name, for: "#{schedule.name}#{item.id}" %><br>
+					<% end %>
+					<%= radio_button_tag( schedule.id, 0, nil == schedule.current, id: "#{schedule.name}0", class: 'set-schedule') %> <%= label_tag "(hide schedule)", "(hide schedule)", for: "#{schedule.name}0" %>
+
+
+					<script type="text/javascript" charset="utf-8">
+					$('.set-schedule').bind('change', function(a) {
+					    var z = a;
+						$.ajax({
+							url: "<%= admin_set_schedule_path %>?schedule=" + a.currentTarget.name + "&item=" + a.currentTarget.value,
+							headers: {
+								Accept : "text/javascript; charset=utf-8",
+								"Content-Type": 'application/x-www-form-urlencoded; charset=UTF-8'
+							},
+							type: 'POST'
+						});
+					});
+					</script>
+				</div>
+			</div>
+			<%= render partial: "user_modal" %>
+		<% end %>
+
+		<% end %>
 	</div>
 </div>
