--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: 'tabs' %>
 <%= render partial: 'table', locals: { users: @users, psets: @psets } %>
 <%= render partial: "grade_modal" %>
+<%= render partial: "user_modal" %>
 
 <script type="text/javascript" charset="utf-8">
 $(function()
